--- a/CarterVouriAboutPage.html
+++ b/CarterVouriAboutPage.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <li><a href="#AboutSkipLink">Skip To Main Content</a></li>
+        <div id="skip"> <li><a href="#AboutSkipLink">Skip To Main Content</a></li> </div>
 
 
         <div class="menu">
