--- a/CarterVouriContact.html
+++ b/CarterVouriContact.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <li><a href="#AboutSkipLink">Skip To Main Content</a></li>
+        <div id="skip"> <li><a href="#AboutSkipLink">Skip To Main Content</a></li> </div>
         <div class="menu">
             <h1> Carter Vouri Website</h1>
             <h1>•Contact Me• </h1>
